# appointment

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20240101_init.py
app/: __init__.py  main.py
app/api/schemas/: __init__.py  appointments.py  schedules.py  services.py  users.py
app/api/v1/: router.py
app/api/v1/routes/: appointments.py  health.py  schedules.py  services.py  users.py
app/application/appointments/: service.py
app/application/interfaces/: __init__.py  cache.py  mq.py  notifier.py  repositories.py
app/application/schedules/: service.py
app/application/services/: service.py
app/application/users/: service.py
app/core/: config.py  context.py  db.py  dependencies.py  logging.py
app/domain/appointments/: entities.py
app/domain/schedules/: entities.py
app/domain/services/: entities.py
app/domain/users/: entities.py
app/infrastructure/cache/: redis_cache.py
app/infrastructure/db/: __init__.py  models.py
app/infrastructure/mq/: publisher.py
app/infrastructure/notifications/: telegram.py
app/infrastructure/repositories/: appointments.py  schedules.py  services.py  users.py
tests/: conftest.py  fakes.py
tests/integration/: test_booking_flow.py
tests/unit/: test_appointments_service.py
worker/: main.py
