[tool.poetry]
name = "appointment-hub"
version = "0.1.0"
description = "Backend for Appointment Hub - online booking platform."
authors = ["Dayana"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.23.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.25" }
asyncpg = {version = "^0.29.0", markers = "python_version < '3.13'"}
psycopg = {version = "^3.1.18", extras = ["binary"]}
alembic = "^1.13.1"
pydantic = {version = "^2.6.1", extras = ["email"]}
email-validator = "^2.1.0.post1"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
aio-pika = "^9.4.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
testcontainers = { extras = ["postgresql"], version = "^4.5.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
types-redis = "^4.6.0.20240311"
types-python-dateutil = "^2.9.0.20240316"
psycopg2-binary = "^2.9.9"

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=30"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
